--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ aws-config = "0.56"
 aws-sdk-sts = "0.31"
 iceberg-catalog-nessie = { git = "https://github.com/dashbook/iceberg-catalog-nessie-rust.git" }
 iceberg-rust = { git = "https://github.com/JanKaul/iceberg-rust.git" }
+object_store = "0.7"
 postgrest = "1.6"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
